--- a/src/components/description/description.scss
+++ b/src/components/description/description.scss
@@ -14,7 +14,6 @@
           margin-bottom: 0.4rem;
         }
         p {
-          
           text-align: justify;
           font-size: 0.85rem;
         }
@@ -36,23 +35,23 @@
           }
         }
       }
-      .dist{
+      .dist {
         p {
-            font-weight: 600;
-            color: grey;
-            margin-right: 10px;
-          }
+          font-weight: 600;
+          color: grey;
+          margin-right: 10px;
+        }
 
-          span {
-            font-weight: 400;
-            font-size: 0.78rem;
-          }
+        span {
+          font-weight: 400;
+          font-size: 0.78rem;
+        }
       }
     }
     .right {
-        h2{
-            color: var(--SecondaryColor);
-        }
+      h2 {
+        color: var(--SecondaryColor);
+      }
       flex-basis: 50%;
       .map {
         width: 100%;
@@ -61,7 +60,35 @@
           width: 100%;
           height: 100%;
         }
-        
+      }
+    }
+    .map {
+      position: relative;
+      height: 0;
+      iframe {
+        border: 0;
+        height: 100%;
+        width: 100%;
+        left: 0;
+        right: 0;
+        position: absolute;
+      }
+    }
+  }
+  @media screen and (max-width: 900px) {
+    .content-description {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      flex-wrap: wrap;
+
+      .left,
+      .right {
+        flex-basis: 90%;
+      }
+      .left{
+        margin-bottom: 30px;
+        width: 100%;
       }
     }
   }
