--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -62,17 +62,17 @@
   margin: 10px 0;
 }
 .about .container .content-About .right .images {
-  width: 50%;
-  height: 100%;
+  max-width: 50%;
+  height: 150px;
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
 }
 .about .container .content-About .right .images img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
   padding-right: 30px;
 }
 .about .container .content-About .right .btn {
