--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -64,16 +64,16 @@
           margin: 10px 0;
         }
         .images {
-          width: 50%;
-          height: 100%;
+          max-width: 50%;
+          height: 150px;
           display: flex;
           justify-content: space-between;
           margin-top: 10px;
+          object-fit: scale-down;
 
           img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
             padding-right: 30px;
           }
         }
