--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -63,11 +63,13 @@
           border-top-left-radius: 10px;
           margin-bottom: 15px;
           overflow: hidden;
+          
 
           img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: down;
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
             transition: transform 0.9s;
@@ -83,7 +85,7 @@
         .divider,
         .details,
         .btn {
-          padding-bottom: 20px;
+          padding-bottom: 10px;
           padding: 0 20px;
         }
         .title {
@@ -105,10 +107,10 @@
           display: flex;
           justify-content: space-between;
           h3 {
-            font-size: 0.9rem;
+            font-size: 0.8rem;
           }
           p {
-            font-size: 0.9rem;
+            font-size: 0.8rem;
           }
         }
         .divider {
@@ -118,9 +120,9 @@
           margin: 10px 5px;
         }
         .details {
-          margin: 10px 0;
+          margin: 7px 0;
           p {
-            font-size: 0.79rem;
+            font-size: 0.77rem;
             color: var(--textColor);
             text-align: justify;
             font-weight: 500;
